# otusCppBasic

./: .gitignore  README  README.md
homework_lesson05/: CMakeLists.txt  main.cpp
homework_lesson05/include/: CMakeLists.txt  result.hpp
homework_lesson05/src/: CMakeLists.txt  result.cpp
homework_lesson10/: Ball.cpp  Ball.hpp  World.cpp
homework_lesson12/: CMakeLists.txt  IStatistics.cpp  IStatistics.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  StandardDeviation.cpp  StandardDeviation.h  statistics  statistics.cpp
homework_lesson14/: CMakeLists.txt  main.cpp
homework_lesson14/include/: CMakeLists.txt  MyArray.hpp  MyContainer.hpp  MyIterator.h  MyList.hpp
homework_lesson14/src/: CMakeLists.txt  MyArray.cpp  MyContainer.cpp  MyIterator.cpp  MyList.cpp
homework_lesson16/: CMakeLists.txt  main.cpp
homework_lesson16/include/: MyArray.hpp  MyContainer.hpp  MyList.hpp
homework_lesson16/src/: CMakeLists.txt
homework_lesson16/test/: CMakeLists.txt  array_tests.cpp  list_tests.cpp
homework_lesson30/: main.cpp  test1  test2
homework_lesson35/: CMakeLists.txt  func.cpp  func.hpp  topk_words.cpp
homework_lesson5/: CMakeLists.txt  main.cpp
homework_lesson5/include/: CMakeLists.txt  input_data.hpp  random_value.hpp  result.cpp  result.hpp
homework_lesson5/src/: CMakeLists.txt  input_data.cpp  random_value.cpp
lesson13/: CMakeLists.txt  lec_11_01_func_max.cpp  lec_11_03_func_max_template.cpp  lec_11_04_func_max_specialization.cpp  lec_11_05_func_max_type_greater.cpp  lec_11_11_class_template_inherit.cpp  lec_11_12_class_template_specialization.cpp  lec_11_14_class_template_method.cpp  lec_11_15_class_non_type_template.cpp
lesson_03/: 02_type_ranges_int.cpp  03_type_ranges_float.cpp  04_arithm_operations.cpp  06_if.cpp  CMakeLists.txt
lesson_04/: 1_pow.cpp
lesson_05/1_file_io/: file_io.cpp
lesson_05/2_compilation/: CMakeLists.txt  compilation.h
lesson_05/3_translation/: CMakeLists.txt  translation_unit2.h  translation_unit_main.cpp
lesson_05/5_dynamic/: dynamic_library_usage.cpp
lesson_06/: CMakeLists.txt
lesson_06/menu/: CMakeLists.txt  menu.cpp
lesson_06/menu/test/: CMakeLists.txt
lesson_06/src/: CMakeLists.txt
lesson_06/src/serialize/: serialize.cpp
lesson_06/src/visualize/: visualize.cpp  visualize.h
lesson_08/example1/: config.json
lesson_08/example5/: CMakeLists.txt
lesson_08/example7/: CMakeLists.txt  math.h
lesson_10/: 01_class.cpp  02_methods.cpp  02_methods.hpp  03_constructor.cpp  04_destructor.cpp  05_static.cpp  05_static.h  CMakeLists.txt  example_runner.hpp
lesson_11/: 0.operators.cpp  1.spaceflight.cpp  2.const.cpp  3.mutable.cpp  4.friend.cpp  5.lifetime.cpp  6.inheritance.mem.cpp  CMakeLists.txt
lesson_13/: lec_11_02_func_max_float.cpp  lec_11_06_func_factorial.cpp  lec_11_07_func_several_args.cpp  lec_11_08_func_generate.cpp  lec_11_09_01_func_cpp_header.h  lec_11_09_02_func_cpp_source.inl  lec_11_09_12_func_cpp_source.cpp  lec_11_10_class_template.cpp  lec_11_13_class_full_template_specialization.cpp
lesson_14/: complex_value.cpp  complex_value_copy.cpp  convertion.cpp  destructors.cpp  explicit.cpp  move.cpp  virtual_destructor.cpp
lesson_16/examples/: CMakeLists.txt
lesson_16/project_gtest_by_cmake/: CMakeLists.txt
lesson_16/project_prebuilt_gtest/: CMakeLists.txt  install_prebuild_gtest.sh
lesson_16/project_with_gtest/: CMakeLists.txt
lesson_17/: CMakeLists.txt  chrono.cpp  containers.cpp  filesystem.cpp  string.cpp  string_file_extension.cpp  string_modify.cpp  thread.cpp
lesson_18/: 1_array.cpp  2_vector.cpp  3_list.cpp  4_map.cpp  CMakeLists.txt  line_separator.h
lesson_19/: accumulate.cpp  any_of.cpp  binary_search.cpp  heap.cpp  min_max.cpp  partition.cpp  permutations.cpp  remove.cpp  rotate.cpp  sort.cpp  transform.cpp
lesson_21/dynamic_lib/: main_dynamic_load.cpp
lesson_23/: linux_manual_build-524180-b37208.md
lesson_23/01_header_only/: CMakeLists.txt  main.cpp
lesson_23/02_linking/: CMakeLists.txt  main.cpp
lesson_23/03_make/: CMakeLists.txt  main.cpp
lesson_23/04_find_package/: CMakeLists.txt
lesson_23/05_FetchContent/: CMakeLists.txt  main.cpp
lesson_23/06_ExternalProject/: CMakeLists.txt  main.cpp
lesson_24/: copy_and_swap.cpp  copy_file.cpp  copy_file_errors.cpp  error_codes_classes.cpp  ex_safery_basic_garantee.cpp  ex_safety_no_garantee.cpp  ex_safety_strong_garantee.cpp  gcd.cpp  gcd_dispatch_except.cpp  gcd_err_code.cpp  gcd_err_handling.cpp  gcd_err_out.cpp  gcd_exceptions.cpp
lesson_25/: noexcept.cpp  previous.cpp  tracer.hpp
lesson_26/: buffer.hpp  buffer_example.cpp
lesson_27/: 01_lifetime.cpp  02_raw_pointer.cpp  03_smart_ptr.cpp  04_unique_ptr.cpp  05_shared_ptr.cpp  06_cycle_ref.cpp  07_weak_ptr.cpp  CMakeLists.txt  utils.h
lesson_3/: 01_cin_cout.cpp  01_cin_cout_namespace.cpp  05_bool_logic.cpp  07_switch.cpp  09_for_loop.cpp  10_arrays_pointers.cpp
lesson_30/: count_primes.cpp  savefile_bg.cpp  savefile_bg_cref.cpp  simple_thread.cpp  switch.cpp  thread_guard.cpp  thread_header_review.cpp
lesson_33/: 0_unique_lock.cpp  1_optional.cpp  2_condition_variable.cpp  3_condition.intro.cpp  4_condition.solution.cpp  5_waiting_queue.cpp  CMakeLists.txt
lesson_4/: 0_pow_simple.cpp
lesson_5/2_compilation/: compilation.cpp  linux_build_commands.md
lesson_5/3_translation/: translation_unit1.h
lesson_5/4_static/: CMakeLists.txt
lesson_5/4_static/static_library/: CMakeLists.txt
lesson_5/5_dynamic/: CMakeLists.txt
lesson_5/5_dynamic/dynamic_library/: calculation.cpp
lesson_6/menu/: menu.h
lesson_6/src/: game.cpp
lesson_8/example0_gnu_make/: main.cpp
lesson_8/example5/: main.cpp
lesson_8/example7/: main.cpp
more_about_cmake/: how_to_build.md
more_about_cmake/example0_gnu_make/: Makefile
more_about_cmake/example1/: CMakeLists.txt  (+1 more)
project_work/: CMakeLists.txt  GameStatus.h  README.md  gamelogic.cpp  gamelogic.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgamewindow.cpp  newgamewindow.h  newgamewindow.ui  recordtable.cpp  recordtable.h  rulewindow.cpp  rulewindow.h  rulewindow.ui  timer.cpp  timer.h
(+30 files in other folders)
