cmake_minimum_required(VERSION 3.12)
project(cpp_basic_containers)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(1_array              1_array.cpp)
add_executable(2_vector             2_vector.cpp)
add_executable(3_list               3_list.cpp)
add_executable(4_map                4_map.cpp)
