add_library(${FUNC_NAME_RANDOM_VALUE} SHARED ${MAIN_FILE_RANDOM_VALUE})
add_library(${FUNC_NAME_INPUT_DATA} SHARED ${MAIN_FILE_INPUT_DATA})
add_library(${FUNC_NAME_RESULT} SHARED ${MAIN_FILE_RESULT})

set_target_properties(${FUNC_NAME_RANDOM_VALUE} PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR})

set_target_properties(${FUNC_NAME_INPUT_DATA} PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR})

set_target_properties(${FUNC_NAME_RESULT} PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR})

include_directories(${HPP_DIR})