add_library(${FUNC_NAME_MYCONTAINER} SHARED ${MAIN_FILE_MYCONTAINER})
add_library(${FUNC_NAME_MYLIST} SHARED ${MAIN_FILE_MYLIST})
add_library(${FUNC_NAME_MYARRAY} SHARED ${MAIN_FILE_MYARRAY})

set_target_properties(${FUNC_NAME_MYCONTAINER} PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR})

set_target_properties(${FUNC_NAME_MYLIST} PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR})

set_target_properties(${FUNC_NAME_MYARRAY} PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR})

include_directories(${HPP_DIR})