add_library(${FUNC_NAME_RANDOM_VALUE} SHARED ${MAIN_FILE_RANDOM_VALUE})
add_library(${FUNC_NAME_INPUT_DATA} SHARED ${MAIN_FILE_INPUT_DATA})
add_library(${FUNC_NAME_RESULT} SHARED ${MAIN_FILE_RESULT})

target_include_directories(${FUNC_NAME_RANDOM_VALUE} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(${FUNC_NAME_INPUT_DATA} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(${FUNC_NAME_RESULT} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
